--- a/notebooks/Lyrics.ipynb
+++ b/notebooks/Lyrics.ipynb
@@ -2,17 +2,174 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "amateur-packaging",
+   "id": "periodic-chick",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Dependencies\n",
+    "* openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "biological-canon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dependent-robertson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "from src.decorators import load_key_secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "anticipated-design",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/propietari/Documents/claus/\"\n",
+    "filename = \"OpenAI_keys_JordiPlanas.json\"\n",
+    "@load_key_secret(path, filename, \"secret\")\n",
+    "def return_secret(secret):\n",
+    "    return secret\n",
+    "\n",
+    "def create_completion(text_to_complete, number_of_samples, tokens):\n",
+    "    return openai.Completion.create(\n",
+    "        engine = \"davinci-instruct-beta\",\n",
+    "        prompt = text_to_complete,\n",
+    "        temperature = 0.25,\n",
+    "        max_tokens = tokens,\n",
+    "        n = number_of_samples,\n",
+    "        echo = True\n",
+    "    )\n",
+    "def import_text_from_file(path, filename):\n",
+    "    file = path + filename\n",
+    "    with open(file) as f:\n",
+    "        lines = f.readlines()\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "terminal-carter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = return_secret()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "accredited-latino",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../input/\"\n",
+    "filename = \"Song.txt\"\n",
+    "original_text = import_text_from_file(path, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "convertible-decimal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# response = openai.Completion.create(\n",
+    "#   engine=\"davinci-instruct-beta\",\n",
+    "#   prompt=\"Artificial intelligence (AI) is intelligence demonstrated by machines, unlike the natural intelligence displayed by humans and animals, which involves consciousness and emotionality. The distinction between the former and the latter categories is often revealed by the acronym chosen. 'Strong' AI is usually labelled as AGI (Artificial General Intelligence) while attempts to emulate 'natural' intelligence have been called ABI (Artificial Biological Intelligence). Leading AI textbooks define the field as the study of \\\"intelligent agents\\\": any device that perceives its environment and takes actions that maximize its chance of successfully achieving its goals.[3] Colloquially, the term \\\"artificial intelligence\\\" is often used to describe machines (or computers) that mimic \\\"cognitive\\\" functions that humans associate with the human mind, such as \\\"learning\\\" and \\\"problem solving\\\".[4]\\n\\nAs machines become increasingly capable, tasks considered to require \\\"intelligence\\\" are often removed from the definition of AI, a phenomenon known as the AI effect.[5] A quip in Tesler's Theorem says \\\"AI is whatever hasn't been done yet.\\\"[6] For instance, optical character recognition is frequently excluded from things considered to be AI,[7] having become a routine technology.[8] Modern machine capabilities generally classified as AI include successfully understanding human speech,[9] competing at the highest level in strategic game systems (such as chess and Go),[10] autonomously operating cars, intelligent routing in content delivery networks, and military simulations.[11]\\n\\ntl;dr:\",\n",
+    "#   temperature=0.25,\n",
+    "#   max_tokens=100,\n",
+    "#   top_p=1\n",
+    "# )\n",
+    "response = create_completion(original_text[0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "handmade-second",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject text_completion id=cmpl-2oUWJDMErTlgTBcvFZOoTQ9z0Awjj at 0x7f5cbf55bbd0> JSON: {\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"finish_reason\": \"length\",\n",
+       "      \"index\": 0,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"\\nI'm sorry, I don't speak Australian\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"finish_reason\": \"length\",\n",
+       "      \"index\": 1,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"\\nI don\\u2019t know.\\n\\n\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"finish_reason\": \"length\",\n",
+       "      \"index\": 2,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"\\nYes, there are days when I\\u2019\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"finish_reason\": \"length\",\n",
+       "      \"index\": 3,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"\\nI'm not sure\\n\\nI'm not\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"created\": 1618386395,\n",
+       "  \"id\": \"cmpl-2oUWJDMErTlgTBcvFZOoTQ9z0Awjj\",\n",
+       "  \"model\": \"if-davinci-v2\",\n",
+       "  \"object\": \"text_completion\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bearing-fortune",
+   "id": "native-webmaster",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "summary_text = response[\"choices\"][0][\"text\"].split(\"\\n\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "patent-holder",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_text"
+   ]
   }
  ],
  "metadata": {
@@ -32,6 +189,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
