First advanced version

--- a/notebooks/Lyrics.ipynb
+++ b/notebooks/Lyrics.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "id": "anticipated-design",
    "metadata": {},
    "outputs": [],
@@ -48,16 +48,37 @@
     "    return openai.Completion.create(\n",
     "        engine = \"davinci-instruct-beta\",\n",
     "        prompt = text_to_complete,\n",
-    "        temperature = 0.25,\n",
+    "        temperature = 0.9,\n",
     "        max_tokens = tokens,\n",
-    "        n = number_of_samples,\n",
-    "        echo = True\n",
+    "#         stop = \"\\n\\n\",\n",
+    "        n = number_of_samples #by default it gives you 4 choices so you multiply 4 times n\n",
     "    )\n",
     "def import_text_from_file(path, filename):\n",
     "    file = path + filename\n",
     "    with open(file) as f:\n",
     "        lines = f.readlines()\n",
-    "    return lines"
+    "    return lines\n",
+    "\n",
+    "def calculate_tokens(text):\n",
+    "    string = \"\"\n",
+    "    for item in text:\n",
+    "        string = string + item\n",
+    "    return(len(string)/4)\n",
+    "\n",
+    "def filter_response():\n",
+    "    \n",
+    "\n",
+    "def show_responses(base_text, filtered_response):\n",
+    "    string = \"\"\n",
+    "    for item in base_text:\n",
+    "        string = string + item\n",
+    "        \n",
+    "    i = 1\n",
+    "    for item in response[\"choices\"]:\n",
+    "        new_text = item[\"text\"]\n",
+    "        new_text = new_text.replace(\"\\n\\n\", \"\\n\")\n",
+    "        print(f\"*** {i} ***\\n{string}{new_text}\\n\")\n",
+    "        i += 1"
    ]
   },
   {
@@ -84,81 +105,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
    "id": "convertible-decimal",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# response = openai.Completion.create(\n",
-    "#   engine=\"davinci-instruct-beta\",\n",
-    "#   prompt=\"Artificial intelligence (AI) is intelligence demonstrated by machines, unlike the natural intelligence displayed by humans and animals, which involves consciousness and emotionality. The distinction between the former and the latter categories is often revealed by the acronym chosen. 'Strong' AI is usually labelled as AGI (Artificial General Intelligence) while attempts to emulate 'natural' intelligence have been called ABI (Artificial Biological Intelligence). Leading AI textbooks define the field as the study of \\\"intelligent agents\\\": any device that perceives its environment and takes actions that maximize its chance of successfully achieving its goals.[3] Colloquially, the term \\\"artificial intelligence\\\" is often used to describe machines (or computers) that mimic \\\"cognitive\\\" functions that humans associate with the human mind, such as \\\"learning\\\" and \\\"problem solving\\\".[4]\\n\\nAs machines become increasingly capable, tasks considered to require \\\"intelligence\\\" are often removed from the definition of AI, a phenomenon known as the AI effect.[5] A quip in Tesler's Theorem says \\\"AI is whatever hasn't been done yet.\\\"[6] For instance, optical character recognition is frequently excluded from things considered to be AI,[7] having become a routine technology.[8] Modern machine capabilities generally classified as AI include successfully understanding human speech,[9] competing at the highest level in strategic game systems (such as chess and Go),[10] autonomously operating cars, intelligent routing in content delivery networks, and military simulations.[11]\\n\\ntl;dr:\",\n",
-    "#   temperature=0.25,\n",
-    "#   max_tokens=100,\n",
-    "#   top_p=1\n",
-    "# )\n",
-    "response = create_completion(original_text[0:4])"
+    "response = create_completion(original_text[0:4], 1, int(calculate_tokens(original_text[0:4]) * 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "handmade-second",
+   "execution_count": 76,
+   "id": "complete-logan",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** 1 ***\n",
+      "Good day, as the Australians say\n",
+      "But do you know if it’s good or bad?\n",
+      "Are there days when you’re happy or sad?\n",
+      "Have you ever felt young\n",
+      "\n",
+      "-Hello\n",
+      "How's it going?\n",
+      "-Eh, alright.\n",
+      "You look like you're in a good mood\n",
+      "-Yes, I\n",
+      "\n",
+      "*** 2 ***\n",
+      "Good day, as the Australians say\n",
+      "But do you know if it’s good or bad?\n",
+      "Are there days when you’re happy or sad?\n",
+      "Have you ever felt young\n",
+      "\n",
+      "I’ll take it apart and see what I can find.\n",
+      "\n",
+      "*** 3 ***\n",
+      "Good day, as the Australians say\n",
+      "But do you know if it’s good or bad?\n",
+      "Are there days when you’re happy or sad?\n",
+      "Have you ever felt young\n",
+      "\n",
+      "Yes. I’ve been feeling a lot better.\n",
+      "Are you feeling any better?\n",
+      "There are better days.\n",
+      "5. Do you\n",
+      "\n",
+      "*** 4 ***\n",
+      "Good day, as the Australians say\n",
+      "But do you know if it’s good or bad?\n",
+      "Are there days when you’re happy or sad?\n",
+      "Have you ever felt young\n",
+      "\n",
+      "Like you're caught up in the moments\n",
+      "A feeling of everything is right\n",
+      "But if only for a moment\n",
+      "Give me the chance to take you\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_responses(original_text[0:4], response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "native-webmaster",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-2oUWJDMErTlgTBcvFZOoTQ9z0Awjj at 0x7f5cbf55bbd0> JSON: {\n",
+       "<OpenAIObject text_completion id=cmpl-2oVYyZwW9gAWVyw6jovCJymOXbcKS at 0x7f5cbf47f0e0> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"length\",\n",
        "      \"index\": 0,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nI'm sorry, I don't speak Australian\"\n",
+       "      \"text\": \"\\n-Hello\\n\\nHow's it going?\\n\\n-Eh, alright.\\n\\nYou look like you're in a good mood\\n\\n-Yes, I\"\n",
        "    },\n",
        "    {\n",
-       "      \"finish_reason\": \"length\",\n",
+       "      \"finish_reason\": \"stop\",\n",
        "      \"index\": 1,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nI don\\u2019t know.\\n\\n\"\n",
+       "      \"text\": \"\\nI\\u2019ll take it apart and see what I can find.\"\n",
        "    },\n",
        "    {\n",
        "      \"finish_reason\": \"length\",\n",
        "      \"index\": 2,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nYes, there are days when I\\u2019\"\n",
+       "      \"text\": \"\\nYes. I\\u2019ve been feeling a lot better.\\n\\nAre you feeling any better?\\n\\nThere are better days.\\n\\n5. Do you\"\n",
        "    },\n",
        "    {\n",
        "      \"finish_reason\": \"length\",\n",
        "      \"index\": 3,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nI'm not sure\\n\\nI'm not\"\n",
+       "      \"text\": \"\\nLike you're caught up in the moments\\n\\nA feeling of everything is right\\n\\nBut if only for a moment\\n\\nGive me the chance to take you\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1618386395,\n",
-       "  \"id\": \"cmpl-2oUWJDMErTlgTBcvFZOoTQ9z0Awjj\",\n",
+       "  \"created\": 1618390404,\n",
+       "  \"id\": \"cmpl-2oVYyZwW9gAWVyw6jovCJymOXbcKS\",\n",
        "  \"model\": \"if-davinci-v2\",\n",
        "  \"object\": \"text_completion\"\n",
        "}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "native-webmaster",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary_text = response[\"choices\"][0][\"text\"].split(\"\\n\")[0]"
    ]
   },
   {
