--- a/notebooks/Lyrics.ipynb
+++ b/notebooks/Lyrics.ipynb
@@ -22,18 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "id": "dependent-robertson",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
+    "import re\n",
     "from src.decorators import load_key_secret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 125,
    "id": "anticipated-design",
    "metadata": {},
    "outputs": [],
@@ -65,19 +66,35 @@
     "        string = string + item\n",
     "    return(len(string)/4)\n",
     "\n",
-    "def filter_response():\n",
+    "find_digit = re.compile(r'\\d')\n",
+    "def filter_response(response, stanza_length, max_verse_length, min_verse_length):\n",
+    "    clean_list = []\n",
+    "    for item in response[\"choices\"]:\n",
+    "        new_text = item[\"text\"]\n",
+    "        new_text = new_text.strip(\"\\n\")\n",
+    "        new_text = new_text.replace(\"\\n\\n\", \"\\n\")\n",
+    "        text_list = new_text.split(\"\\n\")\n",
+    "        string = \"\\n\"\n",
+    "        flag = True\n",
+    "        if len(text_list) >= stanza_length:\n",
+    "            for verse in text_list[0:stanza_length]:\n",
+    "                if re.search(r'\\d+', verse) is None and verse not in string and len(verse) < max_verse_length and len(verse) > min_verse_length:\n",
+    "                    string = string + verse + \"\\n\"\n",
+    "                else:\n",
+    "                    flag = False\n",
+    "            if flag is True:        \n",
+    "                clean_list.append(string)\n",
+    "    return clean_list\n",
+    "            \n",
     "    \n",
     "\n",
     "def show_responses(base_text, filtered_response):\n",
     "    string = \"\"\n",
     "    for item in base_text:\n",
     "        string = string + item\n",
-    "        \n",
-    "    i = 1\n",
-    "    for item in response[\"choices\"]:\n",
-    "        new_text = item[\"text\"]\n",
-    "        new_text = new_text.replace(\"\\n\\n\", \"\\n\")\n",
-    "        print(f\"*** {i} ***\\n{string}{new_text}\\n\")\n",
+    "    i = 0\n",
+    "    for stanza in filtered_response:\n",
+    "        print(f\"*** {i} ***\\n{string}{stanza}\\n\")\n",
     "        i += 1"
    ]
   },
@@ -93,135 +110,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "id": "accredited-latino",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"../input/\"\n",
-    "filename = \"Song.txt\"\n",
-    "original_text = import_text_from_file(path, filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "convertible-decimal",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = create_completion(original_text[0:4], 1, int(calculate_tokens(original_text[0:4]) * 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "complete-logan",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** 1 ***\n",
-      "Good day, as the Australians say\n",
+      "max verse length is: 52 and min verse length is: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"../input/\"\n",
+    "filename = \"Song.txt\"\n",
+    "original_text = import_text_from_file(path, filename)\n",
+    "\n",
+    "maxim = 0\n",
+    "minim = 50\n",
+    "for i,item in enumerate(original_text):\n",
+    "    if len(item) > maxim:\n",
+    "        maxim = len(item)\n",
+    "    if len(item) < minim:\n",
+    "        minim = len(item)\n",
+    "    \n",
+    "print(\"max verse length is:\", maxim, \"and min verse length is:\", minim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "convertible-decimal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_stanza_length = 5\n",
+    "output_stanza_length = 5\n",
+    "max_verse_length = 55\n",
+    "min_verse_length = 10\n",
+    "text_to_complete = original_text[0:input_stanza_length]\n",
+    "response = create_completion(text_to_complete, 2, int(calculate_tokens(text_to_complete) * 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "native-webmaster",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** 0 ***\n",
+      "Good day, as we usually say\n",
       "But do you know if it’s good or bad?\n",
       "Are there days when you’re happy or sad?\n",
       "Have you ever felt young\n",
+      "Or ever felt old?\n",
       "\n",
-      "-Hello\n",
-      "How's it going?\n",
-      "-Eh, alright.\n",
-      "You look like you're in a good mood\n",
-      "-Yes, I\n",
+      "You're a handsome man\n",
+      "Please, what's your name?\n",
+      "I'm Morris, but people say I'm a chubby\n",
+      "Now, don't you worry\n",
+      "You're a chubby guy\n",
+      "\n",
+      "\n",
+      "*** 1 ***\n",
+      "Good day, as we usually say\n",
+      "But do you know if it’s good or bad?\n",
+      "Are there days when you’re happy or sad?\n",
+      "Have you ever felt young\n",
+      "Or ever felt old?\n",
+      "\n",
+      "How often does this happen?\n",
+      "What makes you happy?\n",
+      "What makes you sad?\n",
+      "What do you do when  you’re happy?\n",
+      "What do you do when you’re sad?\n",
+      "\n",
       "\n",
       "*** 2 ***\n",
-      "Good day, as the Australians say\n",
+      "Good day, as we usually say\n",
       "But do you know if it’s good or bad?\n",
       "Are there days when you’re happy or sad?\n",
       "Have you ever felt young\n",
+      "Or ever felt old?\n",
       "\n",
-      "I’ll take it apart and see what I can find.\n",
+      "Have you ever felt old\n",
+      "Have you ever felt hungry\n",
+      "Have you ever felt full\n",
+      "Have you ever fallen down\n",
+      "Have you ever fallen out\n",
+      "\n",
       "\n",
       "*** 3 ***\n",
-      "Good day, as the Australians say\n",
+      "Good day, as we usually say\n",
       "But do you know if it’s good or bad?\n",
       "Are there days when you’re happy or sad?\n",
       "Have you ever felt young\n",
+      "Or ever felt old?\n",
       "\n",
-      "Yes. I’ve been feeling a lot better.\n",
-      "Are you feeling any better?\n",
-      "There are better days.\n",
-      "5. Do you\n",
+      "People with money\n",
+      "Just take it all for granted\n",
+      "And people with time\n",
+      "Don’t know what to do with it\n",
+      "Age, old, time, people, money, people, time, money\n",
+      "\n",
       "\n",
       "*** 4 ***\n",
-      "Good day, as the Australians say\n",
+      "Good day, as we usually say\n",
       "But do you know if it’s good or bad?\n",
       "Are there days when you’re happy or sad?\n",
       "Have you ever felt young\n",
+      "Or ever felt old?\n",
       "\n",
-      "Like you're caught up in the moments\n",
-      "A feeling of everything is right\n",
-      "But if only for a moment\n",
-      "Give me the chance to take you\n",
+      "If so, that must be thrilling.\n",
+      "You just might have a winning smile\n",
+      "or a likeable personality.\n",
+      "The next time you're feeling old\n",
+      "just remember the song\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "show_responses(original_text[0:4], response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "native-webmaster",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-2oVYyZwW9gAWVyw6jovCJymOXbcKS at 0x7f5cbf47f0e0> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n-Hello\\n\\nHow's it going?\\n\\n-Eh, alright.\\n\\nYou look like you're in a good mood\\n\\n-Yes, I\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 1,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nI\\u2019ll take it apart and see what I can find.\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 2,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nYes. I\\u2019ve been feeling a lot better.\\n\\nAre you feeling any better?\\n\\nThere are better days.\\n\\n5. Do you\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 3,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \"\\nLike you're caught up in the moments\\n\\nA feeling of everything is right\\n\\nBut if only for a moment\\n\\nGive me the chance to take you\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1618390404,\n",
-       "  \"id\": \"cmpl-2oVYyZwW9gAWVyw6jovCJymOXbcKS\",\n",
-       "  \"model\": \"if-davinci-v2\",\n",
-       "  \"object\": \"text_completion\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
+    "\n",
+    "show_responses(text_to_complete, filter_response(response, output_stanza_length, max_verse_length, min_verse_length))"
    ]
   },
   {
