--- a/notebooks/Lyrics.ipynb
+++ b/notebooks/Lyrics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "biological-canon",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "dependent-robertson",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "anticipated-design",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "terminal-carter",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 36,
    "id": "accredited-latino",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max verse length is: 52 and min verse length is: 11\n"
+      "max verse length is: 35 and min verse length is: 30\n"
      ]
     }
    ],
@@ -140,97 +140,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "id": "convertible-decimal",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_stanza_length = 5\n",
-    "output_stanza_length = 5\n",
+    "input_stanza_length = 4\n",
+    "output_stanza_length = 4\n",
     "max_verse_length = 55\n",
-    "min_verse_length = 10\n",
+    "min_verse_length = 20\n",
     "text_to_complete = original_text[0:input_stanza_length]\n",
-    "response = create_completion(text_to_complete, 2, int(calculate_tokens(text_to_complete) * 3))"
+    "response = create_completion(text_to_complete, 20, int(calculate_tokens(text_to_complete) * 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 40,
    "id": "native-webmaster",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "*** 0 ***\n",
-      "Good day, as we usually say\n",
-      "But do you know if it’s good or bad?\n",
-      "Are there days when you’re happy or sad?\n",
-      "Have you ever felt young\n",
-      "Or ever felt old?\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
       "\n",
-      "You're a handsome man\n",
-      "Please, what's your name?\n",
-      "I'm Morris, but people say I'm a chubby\n",
-      "Now, don't you worry\n",
-      "You're a chubby guy\n",
+      "You won't find us waving from the back rows\n",
+      "No, we're on the stage, don't try to shake our hands\n",
+      "We're not your typical ones\n",
+      "So reach for the stars\n",
       "\n",
       "\n",
       "*** 1 ***\n",
-      "Good day, as we usually say\n",
-      "But do you know if it’s good or bad?\n",
-      "Are there days when you’re happy or sad?\n",
-      "Have you ever felt young\n",
-      "Or ever felt old?\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
       "\n",
-      "How often does this happen?\n",
-      "What makes you happy?\n",
-      "What makes you sad?\n",
-      "What do you do when  you’re happy?\n",
-      "What do you do when you’re sad?\n",
+      "And I breathe and I see\n",
+      "And I touch but I can't feel\n",
+      "And I weight but I can't tell\n",
+      "And I form but I can't stay\n",
       "\n",
       "\n",
       "*** 2 ***\n",
-      "Good day, as we usually say\n",
-      "But do you know if it’s good or bad?\n",
-      "Are there days when you’re happy or sad?\n",
-      "Have you ever felt young\n",
-      "Or ever felt old?\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
       "\n",
-      "Have you ever felt old\n",
-      "Have you ever felt hungry\n",
-      "Have you ever felt full\n",
-      "Have you ever fallen down\n",
-      "Have you ever fallen out\n",
+      "There is no light without darkness\n",
+      "There is no dark without light\n",
+      "I shall not give up, I shall push on\n",
+      "I will not yield, I will persevere\n",
       "\n",
       "\n",
       "*** 3 ***\n",
-      "Good day, as we usually say\n",
-      "But do you know if it’s good or bad?\n",
-      "Are there days when you’re happy or sad?\n",
-      "Have you ever felt young\n",
-      "Or ever felt old?\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
       "\n",
-      "People with money\n",
-      "Just take it all for granted\n",
-      "And people with time\n",
-      "Don’t know what to do with it\n",
-      "Age, old, time, people, money, people, time, money\n",
+      "I break down and I cry, but I never give up\n",
+      "The tears I make speak louder than words\n",
+      "I'm the one who will never give up\n",
+      "I have faith in tomorrow\n",
       "\n",
       "\n",
       "*** 4 ***\n",
-      "Good day, as we usually say\n",
-      "But do you know if it’s good or bad?\n",
-      "Are there days when you’re happy or sad?\n",
-      "Have you ever felt young\n",
-      "Or ever felt old?\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
       "\n",
-      "If so, that must be thrilling.\n",
-      "You just might have a winning smile\n",
-      "or a likeable personality.\n",
-      "The next time you're feeling old\n",
-      "just remember the song\n",
+      "I close my eyes and try to sleep\n",
+      "I hear you calling my name\n",
+      "Calling me from the Dark\n",
+      "A something in my veins\n",
+      "\n",
+      "\n",
+      "*** 5 ***\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
+      "\n",
+      "I'm so afraid that it will end\n",
+      "But what I'm all the time startin'\n",
+      "Soon will finish, soon will finish\n",
+      "What I'm all the time startin'\n",
+      "\n",
+      "\n",
+      "*** 6 ***\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
+      "\n",
+      "\"I fear the lapse, I fear the lapse\"\n",
+      "I fear the lapse of scripture, \n",
+      "I fear the lapse of scripture - \n",
+      "\"I fear the lapse of scripture, \n",
+      "\n",
+      "\n",
+      "*** 7 ***\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
+      "\n",
+      "and there are still other things\n",
+      "that I've never seen before\n",
+      "I don't know what the future will hold\n",
+      "But my future's bright\n",
+      "\n",
+      "\n",
+      "*** 8 ***\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
+      "\n",
+      "I am baffled by some things\n",
+      "I like to read digitally\n",
+      "I like to read analog\n",
+      "I like to read in both\n",
+      "\n",
+      "\n",
+      "*** 9 ***\n",
+      "I feel the wires, I feel the wires\n",
+      "My blood flows and my heart beats\n",
+      "I fear the lapse, I fear the lapse\n",
+      "I keep discovering new things\n",
+      "\n",
+      "And my progress is solid\n",
+      "I don't control anything\n",
+      "I just observe and react\n",
+      "It's beautiful and chaotic\n",
       "\n",
       "\n"
      ]
