new files and better notebook

--- a/notebooks/SyntheticVoice.ipynb
+++ b/notebooks/SyntheticVoice.ipynb
@@ -2,38 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bd94c786",
+   "execution_count": null,
+   "id": "2d0ba698",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: s'ha d'executar com a root\n",
-      "yes: eixida estàndard: La canonada s’ha trencat\n",
-      "S'està llegint la llista de paquets… Fet \n",
-      "\u001b[1;31mE: \u001b[0mNo s'ha pogut obrir el fitxer de blocat /var/lib/apt/lists/lock - open (13: S’ha denegat el permís)\u001b[0m\n",
-      "\u001b[1;31mE: \u001b[0mNo es pot blocar el directori /var/lib/apt/lists/\u001b[0m\n",
-      "\u001b[1;33mW: \u001b[0mHi ha hagut un problema en desenllaçar el fitxer /var/cache/apt/pkgcache.bin - RemoveCaches (13: S’ha denegat el permís)\u001b[0m\n",
-      "\u001b[1;33mW: \u001b[0mHi ha hagut un problema en desenllaçar el fitxer /var/cache/apt/srcpkgcache.bin - RemoveCaches (13: S’ha denegat el permís)\u001b[0m\n",
-      "\u001b[1;31mE: \u001b[0mNo s'ha pogut obrir el fitxer de blocat /var/lib/dpkg/lock-frontend - open (13: S’ha denegat el permís)\u001b[0m\n",
-      "\u001b[1;31mE: \u001b[0mNo es pot obtenir el bloqueig de la interfície del dpkg (/var/lib/dpkg/lock-frontend). Sou root?\u001b[0m\n",
-      "ln: no s’ha pogut crear l’enllaç simbòlic '/usr/bin/musescore': S’ha denegat el permís\n"
+      "[sudo] contrasenya per a propietari: Error: s'ha d'executar com a root\n"
      ]
     }
    ],
    "source": [
-    "!yes | add-apt-repository ppa:mscore-ubuntu/mscore3-stable\n",
-    "!apt update\n",
-    "!apt install musescore3\n",
-    "!ln -s /usr/bin/musescore3 /usr/bin/musescore"
+    " import getpass\n",
+    " import os\n",
+    "\n",
+    "#  password = getpass.getpass()\n",
+    "#  command = \"sudo -S yes | add-apt-repository ppa:mscore-ubuntu/mscore3-stable\" # can be any command but don't forget -S as it enables input from stdin\n",
+    "#  os.popen(command, 'w').write(password+'\\n')\n",
+    "    \n",
+    "#  password = getpass.getpass()\n",
+    "#  command = \"sudo -S yes | add-apt-repository ppa:mscore-ubuntu/mscore3-stable\" #can be any command but don't forget -S as it enables input from stdin\n",
+    "#  os.system('echo %s | %s' % (password, command))\n",
+    "\n",
+    "!sudo -S yes | add-apt-repository ppa:mscore-ubuntu/mscore3-stable ../claus/ClauMestra"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d60bfb",
+   "id": "8a95c38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[sudo] contrasenya per a propietari: Error: s'ha d'executar com a root\n",
+      "\n",
+      "[sudo] contrasenya per a propietari: \n",
+      "[sudo] contrasenya per a propietari: "
+     ]
+    }
+   ],
+   "source": [
+    "!sudo yes | add-apt-repository ppa:mscore-ubuntu/mscore3-stable\n",
+    "!sudo apt update\n",
+    "!sudo apt install musescore3\n",
+    "!sudo ln -s /usr/bin/musescore3 /usr/bin/musescore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "399d4cd8",
    "metadata": {},
    "outputs": [],
    "source": []
